# ai-dev-platform

./: .gitignore  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  compose.override.yml  compose.traefik.yml  compose.yml  deployment.md  development.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-notes.md  standalone.py  start-backend.bat  start-standalone.bat  sync-deps.bat
.codebuddy/: ARCHITECTURE.md  TASKS.md
.codebuddy/memory/: 2025-07-02.md  2026-07-01.md  2026-07-02.md  MEMORY.md
.github/workflows/: playwright.yml  pre-commit.yml  smokeshow.yml  test-backend.yml  zizmor.yml
.playwright-cli/: page-2026-06-12T14-24-08-942Z.yml  page-2026-06-12T14-33-41-587Z.yml  page-2026-06-12T14-35-57-747Z.yml  page-2026-06-12T14-38-15-249Z.yml
ai_models/: README.md  __init__.py  api_proxy.py  base.py  coder_model.py  downloader.py  optimizer.py  pyproject.toml  registry.py  scheduler.py  video_model.py  vl_model.py
ai_models/prompts/: __init__.py  code_gen.py  video_gen.py
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  utils.py
backend/tests/: test_agent_chat.py  test_agent_e2e.py  test_alembic_migrations.py  test_model_router.py  test_providers.py
deploy/monitoring/: alerting_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml  wechat.tmpl
docs/: REFERENCE_PROJECTS.md
docs/reference-study/: 00-INDEX.md  01-Continue.md  02-Aider.md  03-OpenHands.md  06-CodeEdit.md  07-VSCode.md  08-MonacoEditor.md  09-Cline.md  10-RooCode.md  11-OpenInterpreter.md  12-LangGraph.md  13-AutoGen.md  14-CrewAI.md  15-MCPSpec.md  16-MCPServers.md  17-Tabby.md  18-SWE-agent.md  19-HermesStudio.md
frontend/: package.json
frontend/src/: main.tsx
queue/: pyproject.toml  redis_config.py
skills/: code-review.md  debug.md  explain.md  frontend-design.md  mcp-builder.md  refactor.md  skill-creator.md  test-gen.md  webapp-testing.md
standalone-tools/: README.md
studio-admin/: .env.example  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
studio-client/: .env.example  .gitignore  Dockerfile  biome.json  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
studio-client/src-tauri/: Cargo.toml  target  tauri.conf.json
studio-client/src-tauri/icons/: icon.icns
studio-client/src-tauri/src/: file_watcher.rs  git.rs  lib.rs  main.rs  plugins.rs  settings.rs  shortcuts.rs  terminal.rs
studio-client/src-tauri/src/commands/: fs.rs  git.rs  mod.rs  plugins.rs  search.rs  settings.rs  system.rs  terminal.rs  window.rs
task_queue/: celery_app.py  pyproject.toml
tests/: test_closed_loop.py  test_conversation_manager.py  test_message_history.py
video-admin/: .env  Dockerfile  Dockerfile.playwright  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts
video-client/: .env.example  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
workers/: code_worker.py  pyproject.toml  video_worker.py
(+649 files in other folders)
