[project]
name = "workers"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.4.0",
    "ai-models",
    "task-queue",
]

[tool.uv.sources]
ai-models = { workspace = true }
task-queue = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
