[package]
name = "ide-app"
version = "0.1.0"
description = "AI Fullstack IDE - CodeBuddy Style"
authors = ["IDE Team"]
edition = "2021"

[lib]
name = "ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "shell-open"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
notify = "7"
anyhow = "1"
log = "0.4"
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
